--- a/client/index.html
+++ b/client/index.html
@@ -21,12 +21,12 @@
     />
 
     <!-- google fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato&family=Oswald&family=Source+Sans+3&family=Playfair+Display:wght@400;700&family=Cinzel:wght@400;700&family=EB+Garamond:wght@400;700&display=swap"
+     <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
 
-    <!-- <link rel="icon" type="image/png" href="/images/eeSpark.png" /> -->
+    <link rel="icon" type="image/png" href="/images/shadewave.png" />
 
     <title>Shade Wave</title>
   </head>
